# kafka-materializer

./: .env.dev  README.md  docker-compose.yaml  pyproject.toml
kafka_materializer/: _base.py  api.py  commands.py  settings.py  types.py  worker.py
kafka_materializer/data/: materializer.py
tests/: test_kafka_materializer.py
